--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vue/cli-service": "^3.0.3",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
+    "style-resources-loader": "^1.2.1",
     "typescript": "^3.0.0",
     "vue-template-compiler": "^2.5.17"
   }
